[gd_scene load_steps=3 format=3 uid="uid://cg45jrcau0npi"]

[ext_resource type="Script" uid="uid://ir0h3x62frmh" path="res://ourscripts/safe_zone.gd" id="1_qqpcj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4flt"]

[node name="SafeZone" type="Area2D"]
script = ExtResource("1_qqpcj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i4flt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
